# alpha-agent

./: .env.example  .gitignore  .vercelignore  AlphaCore_Construction_Blueprint_v1.0.docx  AlphaCore_Construction_Blueprint_v1.1.docx  AlphaCore_Construction_Blueprint_v2.0.docx  AlphaCore_系统建构蓝图_v1.1.docx  AlphaCore_系统建构蓝图_v2.0.docx  AlphaCore_系统建构蓝图_v2.0_repaired.docx  Makefile  README.md  README_zh.md  REFACTOR_PLAN.md  deploy.sh  engineering-blueprint-builder-v2.skill  engineering-blueprint-builder.skill  openapi.snapshot.json  patch_backend.py  pyproject.toml  qcore_dashboard.html  requirements.txt  static_report.html  vercel.json
.github/workflows/: _seccomp_audit.yml  apply-migrations.yml  brain-backfill-selfcorr.yml  brain-catalog.yml  brain-diag.yml  brain-dump-fields.yml  brain-mining-loop.yml  brain-show-errors.yml  cron-shards.yml  daily-factor-loop.yml  earnings-finnhub.yml  insider-form4.yml  propose-job-runner.yml  test.yml
_tmp_AlphaCore_Construction_Blueprint_v1.1/docProps/: core.xml
_tmp_AlphaCore_Construction_Blueprint_v1.1/word/: document.xml  endnotes.xml  footnotes.xml  header1.xml  numbering.xml
_tmp_AlphaCore_Construction_Blueprint_v2.0/docProps/: core.xml
_tmp_AlphaCore_Construction_Blueprint_v2.0/word/: document.xml  footer1.xml  header1.xml  numbering.xml  styles.xml
_tmp_AlphaCore_系统建构蓝图_v1.1/docProps/: core.xml
_tmp_AlphaCore_系统建构蓝图_v1.1/word/: document.xml  footer1.xml  header1.xml  styles.xml
_tmp_AlphaCore_系统建构蓝图_v2.0/: [Content_Types].xml
_tmp_AlphaCore_系统建构蓝图_v2.0/docProps/: core.xml
_tmp_AlphaCore_系统建构蓝图_v2.0/word/: document.xml  footer1.xml  header1.xml  settings.xml
alpha_agent/: __main__.py  config.py  config_store.py  ledger.py  main.py  run_health.py  universe.py
alpha_agent/agents/: anomaly_detector.py  backtest.py  base.py  evaluation.py  factor.py  hypothesis.py  research_summary.py  risk_advisor.py
alpha_agent/api/: app.py  byok.py  cache.py  cache_headers.py  dependencies.py  security.py  signal_lookup.py  sse.py  websocket.py
alpha_agent/auth/: crypto_box.py  dependencies.py  jwt_verify.py
alpha_agent/backtest/: __init__.py  adaptive_weights.py  confidence_calibration.py  consistency.py  engine.py  ic_engine.py  l2.py  l2_driver.py  metrics.py  scoreboard.py  tier_validation.py
alpha_agent/brain/: __init__.py  client.py  evolution.py  fastexpr.py  logic_screen.py  mining_loop.py  pnl.py  store.py  tuning.py  vault.py
alpha_agent/cli/: build_card.py
alpha_agent/core/: __init__.py  brain_registry.py  exceptions.py  factor_ast.py  types.py
alpha_agent/data/: __init__.py  cache.py  factor_universe_1y.parquet  factor_universe_sp100_v2.parquet  fundamentals_fetcher.py  fundamentals_pit.parquet  manager.py  (+9 more)
api/: index.py  requirements.txt
docs/: ROADMAP.md  UI-OVERHAUL-PROPOSAL.md  frontend-consolidation-plan.md  l2-paper-trading-plan.md  long_only_factor_selection.md  long_short_factor_selection.md  product-ledger-plan.md  pure_alpha_long_only_rsp_picks.json  signal-registry-consolidation-plan.md  v3_vs_v2_comparison.md  v4_gap_audit_2026-05-01.md
engineering-blueprint-builder/: SKILL.md
frontend/: .env.example  .env.production  .vercelignore  api-types.gen.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vercel.json  vitest.config.ts
scripts/: apply_migrations.py  autodl-setup.sh  backfill_company_names_zh.py  backfill_company_profiles_zh.py  backfill_daily_prices.py  backfill_macro.py  backfill_summaries_zh_parallel.py  brain_backfill_selfcorr.py  brain_catalog_dump.py  brain_diag.py  brain_dump_fields.py  brain_mining_loop.py  brain_show_errors.py  build_brain_registry.py  build_pit_fundamentals.py  cloudflared-config.yml  compare_v2_vs_v3.py  demo.sh  fetch_factor_universe.py  fetch_insider_form4.py  fetch_sp100_v2.py  fetch_sp500_alpaca.py  ingest_earnings_finnhub.py  ingest_insider_form4.py  refresh_fixtures.py  rsrs_validation.py  seccomp_audit.py  select_long_only_factors.py  select_pure_alpha_long_only_rsp.py  smoke_litellm_live.py  upload-report.sh  verify_insider_alpha.py  verify_insider_alpha_v2.py  winsorize_insider_form4.py
tests/: conftest.py  test_agents.py  test_backtest.py  test_backtest_ic_config.py  test_brain_whitelist.py  test_byok.py  test_config_store.py  test_data_provider.py  test_degenerate_expression.py  test_evaluator.py  test_factor_backtest.py  test_factor_custom_expression.py  test_factor_db_autoinit.py  test_frontend_signal_sync.py  test_kernel.py  test_litellm_client.py  test_no_lookahead.py  test_parser.py  test_phase_a_audit.py  test_pipeline.py  test_rating_card_schema.py  test_registry.py  test_regularizer.py  test_report.py  test_run_health.py  test_schema_sync.py  test_scoreboard_metrics.py  test_smoke_robustness.py  test_smoke_stability.py  test_smoke_turnover.py  test_unary_literal.py  test_universe.py
worker/: index.js  wrangler.toml
(+734 files in other folders)
