[project]
name = "alpha-agent"
version = "0.1.0"
description = "LLM-powered alpha factor research agent for A-share markets"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pandas>=2.2",
    "numpy>=2.0",
    "akshare>=1.14",
    "pydantic-settings>=2.0",
    "jinja2>=3.1",
    "matplotlib>=3.8",
    "streamlit>=1.37",
    "plotly>=5.0",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
alpha-agent = "alpha_agent.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["slow: marks tests that hit external networks (deselect with '-m \"not slow\"')"]

[tool.ruff]
target-version = "py312"
line-length = 100

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
