[project]
name = "alpha-agent"
version = "0.1.0"
description = "LLM-powered alpha factor research agent for A-share markets"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic-settings>=2.0",
    "fastapi>=0.115",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.37",
    "plotly>=5.0",
    "matplotlib>=3.8",
    "pyarrow>=15.0",
    "jinja2>=3.1",
]
server = ["uvicorn[standard]>=0.30"]
openai = ["openai>=1.0"]
data = [
    "pandas>=2.2",
    "numpy>=2.0",
    "yfinance>=0.2",
    "akshare>=1.14",
]
ml = [
    "alpha-agent[data]",
    "hmmlearn>=0.3",
    "scikit-learn>=1.5",
    "scipy>=1.12",
    "joblib>=1.4",
    "xgboost>=2.0",
    "torch>=2.3",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
all = ["alpha-agent[ui,server,data,ml]"]

[project.scripts]
alpha-agent = "alpha_agent.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["slow: marks tests that hit external networks (deselect with '-m \"not slow\"')"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.setuptools.packages.find]
include = ["alpha_agent*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
