[project]
name = "alpha-agent"
version = "0.1.0"
description = "LLM-powered alpha factor research agent for A-share markets"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic-settings>=2.0",
    "fastapi>=0.115",
    "numpy>=2.0",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "yfinance>=0.2",
    "exchange-calendars>=4.5",
    "tenacity>=8.0",
    # A1: unified LLM client. Replaces handwritten httpx clients for
    # Kimi/OpenAI/Ollama with a single LiteLLM-routed call. Pinned >=1.50
    # for the Anthropic-compat custom-api_base support that Kimi For
    # Coding requires.
    "litellm>=1.50",
    # M2 storage layer. Duplicated in [storage] optional group for non-Vercel
    # consumers, but kept in core because Vercel runtime install (triggered when
    # bundle > 250MB) only installs [project.dependencies] — see CLAUDE.md
    # memory feedback_pyproject_optional_deps_not_installed.md.
    "asyncpg>=0.29",
    "python-dotenv>=1.0",
    # yfinance internal HTML parsing (analyst/earnings) needs lxml
    "lxml>=4.9",
    # M5 Phase 4: AES-256-GCM for server-side BYOK key encryption.
    "cryptography>=42",
    # M5 Phase 4: verify NextAuth.js HS256 JWTs issued by the frontend.
    "python-jose[cryptography]>=3.3",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.37",
    "plotly>=5.0",
    "matplotlib>=3.8",
    "pyarrow>=15.0",
    "jinja2>=3.1",
]
server = ["uvicorn[standard]>=0.30"]
openai = ["openai>=1.0"]
data = [
    "pandas>=2.2",
    "numpy>=2.0",
    "yfinance>=0.2",
    "akshare>=1.14",
]
ml = [
    "alpha-agent[data]",
    "hmmlearn>=0.3",
    "scikit-learn>=1.5",
    "scipy>=1.12",
    "joblib>=1.4",
    "xgboost>=2.0",
    "torch>=2.3",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
storage = [
    "asyncpg>=0.29",
    "psycopg[binary]>=3.1",  # sync migration runner only
    "python-dotenv>=1.0",
]
test = [
    "alpha-agent[dev]",
    "alpha-agent[storage]",
    "pytest-postgresql>=6.0",
    "pytest-mock>=3.12",
    "respx>=0.21",
]
all = ["alpha-agent[ui,server,data,ml]"]

[project.scripts]
alpha-agent = "alpha_agent.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["slow: marks tests that hit external networks (deselect with '-m \"not slow\"')"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.setuptools.packages.find]
include = ["alpha_agent*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
